# BeeDNN

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build_log.txt  build_wasm.py  files_utf8.txt  generate_test.py  save_load_walkthrough.md
java_binding/: CMakeLists.txt
java_binding/java/com/beednn/: Layer.java  Net.java
java_binding/src/: BeeDNNJava.cpp
python_binding/: BeeDNNLib.cpp  BeeDNNLib.h  BeeDNNLoader.py  CMakeLists.txt  test_binding.py  verify_distributed.py
samples/: CMakeLists.txt  Transformer_example.cpp  sample_classification_xor.cpp  sample_graph_predictor.cpp  sample_regression_sin.cpp  sample_softcomputing.cpp
src/: CMakeLists.txt  Initializers.cpp  Initializers.h  Layer.cpp  Layer.h  LayerActivation.cpp  LayerActivation.h  LayerAffine.cpp  LayerAffine.h  LayerAveragePooling2D.cpp  LayerAveragePooling2D.h  LayerBatchTo2D.cpp  LayerBatchTo2D.h  LayerBias.cpp  LayerBias.h  LayerBilinear.cpp  LayerBilinear.h  LayerCRelu.cpp  LayerCRelu.h  LayerChannelBias.cpp  LayerChannelBias.h  LayerConvolution2D.cpp  LayerConvolution2D.h  LayerDense.cpp  LayerDense.h  LayerDot.cpp  LayerDot.h  LayerDropout.cpp  LayerDropout.h  LayerEmbed.cpp  LayerEmbed.h  LayerFactory.cpp  LayerFactory.h  LayerGEGLU.cpp  LayerGEGLU.h  LayerGLU.cpp  LayerGLU.h  LayerGTU.cpp  LayerGTU.h  LayerGain.cpp  (+90 more)
tests/: CMakeLists.txt  save_load_test.cpp  test_layer_convolution.cpp  test_layers.cpp  test_matrix.cpp  test_regression_sin.cpp
tests/SingleLayersTests/: test_LayerParallel.cpp  test_LayerSequential.cpp
wasm_binding/: CMakeLists.txt  compile.bat  example.html
wasm_binding/src/: BeeDNNWasm.cpp
